# paddlepaddle_backend

./: CMakeLists.txt  Dockerfile  README.md  README_cn.md  README_en.md
docs/: model_configuration.md
docs/zh_CN/: model_configuration.md  model_repository.md
examples/: fetch_models.sh  fetch_perf_data.sh  infer_ernie.py  infer_resnet50_v1.5.py  infer_resnet50_v1.5.sh  perf_ernie.sh  perf_resnet50_v1.5.sh
examples/models/ERNIE/: config.pbtxt
examples/models/ERNIE-QNLI/: config.pbtxt  mkldnn_config.pbtxt  ort_config.pbtxt  trt_config.pbtxt
examples/models/ResNet50-v1.5/: config.pbtxt
paddle-lib/: Dockerfile  build_paddle.sh
scripts/: build_paddle_backend.sh  launch_triton_server.sh
src/: paddle.cc  paddle_backend_utils.cc  paddle_backend_utils.h
